syntax = "proto3";

package hicode.agent;

// Agent服务定义
service AgentService {
  // 执行Agent任务
  rpc ExecuteTask(ExecuteTaskRequest) returns (ExecuteTaskResponse);
  
  // 流式执行Agent任务
  rpc ExecuteTaskStream(ExecuteTaskRequest) returns (stream StreamChunk);
  
  // 调用大模型API（从插件端迁移过来）
  rpc Chat(ChatRequest) returns (ChatResponse);
  
  // 流式调用大模型API
  rpc ChatStream(ChatRequest) returns (stream StreamChunk);
  
  // 获取可用工具列表
  rpc GetTools(GetToolsRequest) returns (GetToolsResponse);
  
  // 执行工具（VS Code相关工具通过此接口调用插件端）
  rpc ExecuteTool(ExecuteToolRequest) returns (ExecuteToolResponse);
}

// ========== 任务执行相关 ==========

message ExecuteTaskRequest {
  AgentTask task = 1;
  CodeContext context = 2;
  ModelConfig model_config = 3;  // 模型配置信息
}

message ExecuteTaskResponse {
  bool success = 1;
  string message = 2;
  repeated CodeChange changes = 3;
  string error = 4;
  ToolCallResult tool_call_result = 5;  // 工具调用结果（如果有）
}

message AgentTask {
  string type = 1;  // refactor, test, document, fix, optimize, custom
  string name = 2;
  string description = 3;
  string prompt = 4;
  bool is_custom = 5;
}

message CodeContext {
  FileInfo current_file = 1;
  CodeSelection selection = 2;
  CursorContext cursor_context = 3;
  repeated RelatedFile related_files = 4;
  ProjectInfo project_info = 5;
}

message FileInfo {
  string path = 1;
  string language = 2;
  string content = 3;
}

message CodeSelection {
  string text = 1;
  int32 start_line = 2;
  int32 end_line = 3;
}

message CursorContext {
  int32 line = 1;
  int32 column = 2;
  string before_cursor = 3;
  string after_cursor = 4;
}

message RelatedFile {
  string path = 1;
  double relevance = 2;
  string excerpt = 3;
}

message ProjectInfo {
  string name = 1;
  repeated string dependencies = 2;
  string framework = 3;
}

message CodeChange {
  string file = 1;
  string original_content = 2;
  string new_content = 3;
  string diff = 4;
}

// ========== LLM API调用相关 ==========

message ChatRequest {
  repeated ChatMessage messages = 1;
  string model = 2;
  bool stream = 3;
  ModelConfig model_config = 4;  // 模型配置
  optional int32 max_tokens = 5;  // 最大token数，可选
}

message ChatResponse {
  string content = 1;
  string finish_reason = 2;  // stop, length, error
  TokenUsage usage = 3;
}

message ChatMessage {
  string role = 1;  // system, user, assistant, tool
  string content = 2;
  repeated ToolCall tool_calls = 3;  // assistant消息可能包含工具调用
  string tool_call_id = 4;  // tool消息的工具调用ID
}

message ToolCall {
  string id = 1;
  string name = 2;
  string arguments = 3;  // JSON字符串
}

message TokenUsage {
  int32 prompt_tokens = 1;
  int32 completion_tokens = 2;
  int32 total_tokens = 3;
}

message ModelConfig {
  string model_id = 1;
  string model_name = 2;
  string display_name = 3;
  string vendor = 4;  // deepseek, openai, zhipuai, custom
  string api_key = 5;
  string api_base_url = 6;
  int32 max_context_tokens = 7;
  bool support_multimodal = 8;
  optional float temperature = 9;  // 温度参数，默认0.6
}

// ========== 工具相关 ==========

message GetToolsRequest {
  // 空请求
}

message GetToolsResponse {
  repeated ToolDefinition tools = 1;
}

message ToolDefinition {
  string name = 1;
  string description = 2;
  string parameters_schema = 3;  // JSON Schema字符串
}

message ExecuteToolRequest {
  string tool_name = 1;
  string arguments = 2;  // JSON字符串
  CodeContext context = 3;  // 代码上下文（某些工具需要）
}

message ExecuteToolResponse {
  bool success = 1;
  string result = 2;  // JSON字符串
  string error = 3;
}

message ToolCallResult {
  string tool_name = 1;
  string result = 2;  // JSON字符串
  bool success = 3;
}

// ========== 流式响应 ==========

message StreamChunk {
  oneof chunk_type {
    StreamText text = 1;
    StreamToolCall tool_call = 2;
    StreamEnd end = 3;
    StreamError error = 4;
  }
}

message StreamText {
  string content = 1;
}

message StreamToolCall {
  string id = 1;
  string name = 2;
  string arguments = 3;
}

message StreamEnd {
  string finish_reason = 1;
  TokenUsage usage = 2;
}

message StreamError {
  string message = 1;
  string code = 2;
}
