/**
 * çœŸå®çš„ gRPC å®¢æˆ·ç«¯å®ç°
 * å‚è€ƒ vscode/hicode é¡¹ç›®çš„å®ç°
 * ç”¨äºä¸ hicode_agent æœåŠ¡é€šä¿¡
 */

import * as grpc from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';
import * as path from 'path';
import * as fs from 'fs';
import { ChatRequest, ChatReply, ChatStreamReply } from './types';

/**
 * gRPC å®¢æˆ·ç«¯ç®¡ç†å™¨
 */
export class GrpcClientManager {
  private client: grpc.Client;
  private isConnected: boolean = false;
  private serverUrl: string;
  private packageDefinition: protoLoader.PackageDefinition | null = null;
  private protoClient: any = null;

  constructor(serverUrl: string = 'localhost:50051') {
    this.serverUrl = serverUrl;
    this.client = new grpc.Client(
      this.serverUrl,
      grpc.credentials.createInsecure(),
      {
        'grpc.keepalive_time_ms': 30000,
        'grpc.keepalive_timeout_ms': 5000,
        'grpc.keepalive_permit_without_calls': 1,
        'grpc.http2.max_pings_without_data': 0,
        'grpc.http2.min_time_between_pings_ms': 10000,
        'grpc.http2.min_ping_interval_without_data_ms': 300000
      }
    );
    this.loadProto();
  }

  /**
   * åŠ è½½ proto æ–‡ä»¶
   */
  private loadProto(): void {
    try {
      const protoPath = path.join(__dirname, '../../proto/agent.proto');
      if (!fs.existsSync(protoPath)) {
        console.warn(`âš ï¸ Proto file not found at ${protoPath}, using JSON serialization`);
        return;
      }

      this.packageDefinition = protoLoader.loadSync(protoPath, {
        keepCase: true,
        longs: String,
        enums: String,
        defaults: true,
        oneofs: true
      });

      const packageDef = grpc.loadPackageDefinition(this.packageDefinition) as any;
      const agentProto = packageDef.hicode?.agent || packageDef.hicode;
      
      if (agentProto && agentProto.AgentService) {
        this.protoClient = new agentProto.AgentService(
          this.serverUrl,
          grpc.credentials.createInsecure()
        );
        console.log('âœ… Proto file loaded successfully');
      } else {
        console.warn('âš ï¸ Failed to load AgentService from proto, using JSON serialization');
      }
    } catch (error) {
      console.warn('âš ï¸ Failed to load proto file, using JSON serialization:', error);
    }
  }

  /**
   * è¿æ¥åˆ° gRPC æœåŠ¡å™¨
   */
  async connect(): Promise<void> {
    return new Promise((resolve, reject) => {
      const deadline = new Date();
      deadline.setSeconds(deadline.getSeconds() + 5);

      this.client.waitForReady(deadline, (error) => {
        if (error) {
          console.error('âŒ è¿æ¥ gRPC æœåŠ¡å™¨å¤±è´¥:', error);
          this.isConnected = false;
          reject(error);
        } else {
          console.log('âœ… æˆåŠŸè¿æ¥åˆ° gRPC æœåŠ¡å™¨');
          this.isConnected = true;
          resolve();
        }
      });
    });
  }

  /**
   * æ–­å¼€è¿æ¥
   */
  disconnect(): void {
    if (this.client) {
      this.client.close();
      this.isConnected = false;
      console.log('ğŸ”Œ å·²æ–­å¼€ gRPC è¿æ¥');
    }
  }

  /**
   * æ£€æŸ¥è¿æ¥çŠ¶æ€
   */
  isClientConnected(): boolean {
    return this.isConnected;
  }

  /**
   * å‘é€æ™®é€šèŠå¤©è¯·æ±‚
   * ä½¿ç”¨ agent.AgentService/Chat æœåŠ¡
   */
  async sendChatRequest(request: ChatRequest): Promise<ChatReply> {
    if (!this.isConnected) {
      await this.connect();
    }

    return new Promise((resolve, reject) => {
      const metadata = new grpc.Metadata();
      
      // å¦‚æœ proto å®¢æˆ·ç«¯å¯ç”¨ï¼Œä½¿ç”¨ proto åºåˆ—åŒ–
      if (this.protoClient) {
        this.protoClient.Chat(request, metadata, (error: any, response: any) => {
          if (error) {
            console.error('âŒ èŠå¤©è¯·æ±‚å¤±è´¥:', error);
            reject(error);
          } else {
            console.log('âœ… èŠå¤©è¯·æ±‚æˆåŠŸ');
            resolve({
              reply: response.content || ''
            });
          }
        });
      } else {
        // å›é€€åˆ° JSON åºåˆ—åŒ–ï¼ˆä¸æ¨èï¼Œä½†ä½œä¸ºå…¼å®¹æ€§æ–¹æ¡ˆï¼‰
        this.client.makeUnaryRequest(
          '/hicode.agent.AgentService/Chat',
          (arg: ChatRequest) => Buffer.from(JSON.stringify(arg)),
          (buffer: Buffer) => JSON.parse(buffer.toString()) as ChatReply,
          request,
          metadata,
          (error: any, response) => {
            if (error) {
              console.error('âŒ èŠå¤©è¯·æ±‚å¤±è´¥:', error);
              reject(error);
            } else {
              console.log('âœ… èŠå¤©è¯·æ±‚æˆåŠŸ:', response);
              resolve(response as ChatReply);
            }
          }
        );
      }
    });
  }

  /**
   * å‘é€æµå¼èŠå¤©è¯·æ±‚
   * ä½¿ç”¨ agent.AgentService/ChatStream æœåŠ¡
   */
  async sendStreamChatRequest(
    request: ChatRequest,
    onChunk: (chunk: string, isEnd: boolean) => void
  ): Promise<void> {
    if (!this.isConnected) {
      await this.connect();
    }

    return new Promise((resolve, reject) => {
      const metadata = new grpc.Metadata();
      
      // å¦‚æœ proto å®¢æˆ·ç«¯å¯ç”¨ï¼Œä½¿ç”¨ proto åºåˆ—åŒ–
      if (this.protoClient) {
        const call = this.protoClient.ChatStream(request, metadata);
        
        call.on('data', (response: any) => {
          // ä» StreamChunk ä¸­æå–æ–‡æœ¬å†…å®¹
          // StreamChunk å¯èƒ½åŒ…å« text å­—æ®µï¼ˆtext.contentï¼‰æˆ–ç›´æ¥åŒ…å« content
          let chunk = '';
          let isEnd = false;
          
          if (response.text && response.text.content) {
            chunk = response.text.content;
          } else if (response.content) {
            chunk = response.content;
          } else if (typeof response === 'string') {
            chunk = response;
          }
          
          // æ£€æŸ¥æ˜¯å¦ç»“æŸ
          if (response.finish_reason === 'stop' || response.finish_reason === 'done' || response.isEnd) {
            console.log('âœ… æµå¼èŠå¤©è¯·æ±‚å®Œæˆï¼Œfinish_reason:', response.finish_reason);
            isEnd = true;
          }
          
          if (chunk) {
            onChunk(chunk, isEnd);
          }
        });

        call.on('error', (error: any) => {
          console.error('âŒ æµå¼èŠå¤©è¯·æ±‚å¤±è´¥:', error);
          // å‘é€ç»“æŸä¿¡å·ï¼Œç”¨äºåœæ­¢å‰ç«¯æµå¼å±•ç¤ºçŠ¶æ€
          onChunk('[DONE]', true);
          reject(error);
        });

        call.on('end', () => {
          console.log('âœ… æµå¼èŠå¤©è¯·æ±‚å®Œæˆ');
          // å‘é€ç»“æŸä¿¡å·ï¼Œç”¨äºåœæ­¢å‰ç«¯æµå¼å±•ç¤ºçŠ¶æ€
          onChunk('[DONE]', true);
          resolve();
        });
      } else {
        // å›é€€åˆ° JSON åºåˆ—åŒ–ï¼ˆä¸æ¨èï¼Œä½†ä½œä¸ºå…¼å®¹æ€§æ–¹æ¡ˆï¼‰
        const call = this.client.makeServerStreamRequest(
          '/hicode.agent.AgentService/ChatStream',
          (arg: ChatRequest) => Buffer.from(JSON.stringify(arg)),
          (buffer: Buffer) => JSON.parse(buffer.toString()) as ChatStreamReply,
          request,
          metadata
        );

        call.on('data', (response: ChatStreamReply) => {
          console.log('ğŸ“¥ æ”¶åˆ°æµå¼æ•°æ®:', response);
          onChunk(response.chunk, response.isEnd);
        });

        call.on('error', (error) => {
          console.error('âŒ æµå¼èŠå¤©è¯·æ±‚å¤±è´¥:', error);
          reject(error);
        });

        call.on('end', () => {
          console.log('âœ… æµå¼èŠå¤©è¯·æ±‚å®Œæˆ');
          resolve();
        });
      }
    });
  }
}

/**
 * å…¨å±€ gRPC å®¢æˆ·ç«¯å®ä¾‹
 */
let grpcClientManager: GrpcClientManager | null = null;

/**
 * è·å– gRPC å®¢æˆ·ç«¯ç®¡ç†å™¨å®ä¾‹
 */
export function getGrpcClientManager(serverUrl?: string): GrpcClientManager {
  if (!grpcClientManager) {
    grpcClientManager = new GrpcClientManager(serverUrl);
  }
  return grpcClientManager;
}

/**
 * åˆå§‹åŒ– gRPC å®¢æˆ·ç«¯
 */
export async function initializeGrpcClient(serverUrl?: string): Promise<void> {
  const client = getGrpcClientManager(serverUrl);
  await client.connect();
}

/**
 * å…³é—­ gRPC å®¢æˆ·ç«¯
 */
export function closeGrpcClient(): void {
  if (grpcClientManager) {
    grpcClientManager.disconnect();
    grpcClientManager = null;
  }
}
